--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
     <div id="cardDetails" style="margin-top: 10px; color: #FFFFFF;"></div>
 
     <!-- Cards Played Button Added Below -->
-    <button onclick="openCardsPlayedModal()" style="padding: 10px 20px; margin-top: 5px; background-color: #333; color: white; border-radius: 5px; cursor: pointer; border: none;">Cards Played</button>
+    <button onclick="openCardsPlayedModal()" style="width: calc(100% - 20px); padding: 10px 20px; margin-top: 5px; background-color: #333; color: white; border-radius: 5px; cursor: pointer; border: none;">Cards Played</button>
 </div>
 
 <!-- Modal for Cards Played -->
