--- a/index.html
+++ b/index.html
@@ -621,8 +621,7 @@
 <body>
 <h2>Standard Resources & TR</h2>
      
-    <!-- Terraforming Rating Button -->
-<div class="terraforming-container full-width" style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+<div class="combined-container" style="background-color: #ececec; border-radius: 15px; padding: 15px; display: flex; align-items: center; justify-content: space-between; max-width: 400px; margin: 20px auto; box-shadow: 0 0px 10px rgba(0, 0, 0, 0.5);">
     <!-- Terraforming Rating Button on the Left -->
     <div class="tr-container" style="display: flex; flex-direction: column; align-items: center;">
         <button class="terraforming-button" onclick="openTRModal()">
