--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
 
 <style>
 
+/* Smaller Mars icon for VP Tracker inside TR container */
+.small-vp-icon-container {
+    position: relative;
+    width: 50px; /* Reduce width to make it smaller */
+    height: 50px; /* Reduce height to make it smaller */
+}
+
+/* Style for the number within the smaller Mars icon */
+.small-vp-number {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px; /* Reduce font size for smaller VP icon */
+    font-weight: bold;
+    color: #ffffff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+
 /* Updated TR and VP container styling */
 .tr-vp-container {
     display: flex;
@@ -24,11 +43,17 @@
     box-sizing: border-box;
 }
 
-/* Styling for the TR container on the left */
+/* Smaller VP Tracker for TR + VP Container */
 .tr-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-between; /* Space out TR and VP elements */
+    align-items: center; /* Align items vertically center */
+    width: 100%;
+    padding: 10px; /* Add some padding for better visual spacing */
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
 }
 
 .tr-container img {
@@ -730,17 +755,18 @@
 <body>
 <h2>Standard Resources & TR</h2>
      
-<!-- Terraforming Rating and VP Tracker Container -->
-<div class="tr-vp-container full-width">
-    <div class="tr-container">
-        <img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR">
-        <span id="trCount">20</span> <!-- Initial value for Terraforming Rating -->
+<!-- Terraforming Rating and VP Tracker Box -->
+<div class="tr-container full-width">
+    <!-- Terraforming Rating Section -->
+    <div>
+        <img src="https://killionaire23.github.io/TMMobile/TR.png" alt="TR" style="width: 50px; height: 50px;">
+        <span id="trCount" style="font-size: 24px;">20</span> <!-- Adjusted to match smaller TR value -->
     </div>
-    <div class="vp-container">
-        <div class="icon-container">
-            <img src="Mars.png" alt="Mars Icon">
-            <div class="vp-number">0</div> 
-        </div>
+
+    <!-- Smaller VP Tracker Section -->
+    <div class="small-vp-icon-container">
+        <img src="Mars.png" alt="VP Icon" style="width: 100%; height: auto; border-radius: 50%;">
+        <div id="trVpNumber" class="small-vp-number">0</div>
     </div>
 </div>
 
