--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 
 /* Terraforming Rating Button */
 .terraforming-button {
-    width: 95%; /* Take up full width of container */
+    width: 97%; /* Take up full width of container */
     padding: 20px;
     font-size: 1.5em;
     border: 1px solid #000000;
@@ -523,7 +523,7 @@
     cursor: pointer;
     border-radius: 10px;
     box-shadow: 0 0px 30px rgba(0, 0, 0, 0.4);
-    position: relative;
+    position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -595,7 +595,7 @@
 
 /* Produce Button */
 .produce-button {
-    width: 95%; /* Take up full width of container */
+    width: 97%; /* Take up full width of container */
     padding: 10px;
     font-size: 1.2em;
     border: 1px solid #000000;
