--- a/index.html
+++ b/index.html
@@ -523,6 +523,8 @@
     cursor: pointer;
     border-radius: 10px;
     box-shadow: 0 0px 30px rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
 }
 
 .terraforming-button img {
